# interface-pocs

./: .gitignore  Cargo.toml  README.md
account-resolution/: README.md
account-resolution/client/: package.json
account-resolution/client/src/: index.ts  manipulate.ts
account-resolution/programs/hello-world/: Cargo.toml
account-resolution/programs/hello-world/src/: lib.rs
account-resolution/test-validator/: Cargo.toml
account-resolution/test-validator/src/: main.rs
das-royalty/: README.md
view-functions/: README.md
