[package]
name = "test-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64="0.21"
solana-account-decoder = "1.14.12"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
elf="0.7.1"
